Submit button color is now Chartreuse

--- a/1_html_css/source/form.html
+++ b/1_html_css/source/form.html
@@ -6,7 +6,7 @@
     <body>
         <form>
             <input type="text" placeholder="Full Name" name="name">
-            <input type="submit">
+            <input style="color: chartreuse;" type="submit">
         </form>
     </body>
 </html>
