--- a/sample-projects/distribution-code/project0/search/advanced-search.html
+++ b/sample-projects/distribution-code/project0/search/advanced-search.html
@@ -3,16 +3,50 @@
     <head>
         <title>Advanced Search</title>
     </head>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        .go-to-home-page {
-            position: absolute;
-            top: 0;
-            right: 0;
+        input[value="Advanced Search"] {
+            border-radius: 2px;
+            cursor: default;
+            font-size: 11px;
+            font-weight: bold;
+            text-align: center;
+            white-space: nowrap;
+            outline: 0;
+            box-shadow: none;
+            background-color: #4d90fe;
+            border: 1px solid #3079ed;
+            color: #fff;
+            padding: 0 12px;
+            margin: 10px 0;
+            user-select: none;
+            line-height: 100%;
+            height: 30px;
+            min-width: 120px;
+        }
+        div > input[value="Advanced Search"]:hover {
+            background-color:#4787ed;
         }
     </style>
     <body>
-        <div class="go-to-home-page">
+        <div class="go-to-google-search">
             <a href="index.html">Main Page</a>
         </div>
+        Find pages with ...<br><br>
+        <form action="https://www.google.com/search">
+            <div class="advanced-search-text-input-container">
+                <label for="box1">all these words: </label>
+                <input id="box1" class="advanced-search-text-input" name="as_q">
+                <label for="box2">this exact word or phrase: </label>
+                <input id="box2" class="advanced-search-text-input" name="as_epq">
+                <label for="box3">any of these words: </label>
+                <input id="box3" class="advanced-search-text-input" name="as_oq">
+                <label for="box4">none of these words: </label>
+                <input id="box4" class="advanced-search-text-input" name="as_eq">
+            </div>
+            <div class="advanced-search-submit-button-container"> 
+                <input type="submit" value="Advanced Search">
+            </div>
+        </form>
     </body>
 </html>
